Finish implementing SimpleExpressionControl and fix every related classes